--- a/index.html
+++ b/index.html
@@ -1,55 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  #right-panel {
-    font-family: 'Roboto','sans-serif';
-    line-height: 30px;
-    padding-left: 2px;
-  }
 
-  #right-panel select, #right-panel input {
-    font-size: 15px;
-  }
-
-  #right-panel select {
-    width: 100%;
-  }
-
-  #right-panel i {
-    font-size: 12px;
-  }
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  #map {
-    height: 100%; !important
-    width: 100%; !important
-  }
-  #right-panel {
-    float: right;
-    width: 28%;
-    padding-left: 2%;
-  }
-  #output {
-    font-size: 11px;
-  }
-</style>
 </head>
 
-<body>
+<body style="font-family:courier;">
 
   <h1>tripMaps</h1>
 
   <p>content</p>
 
-  <div id="map">
-    div
-  </div>
-
   <script src = 'index.js'> </script>
+  <script src = 'renderer.js'> </script>
+
+  <div id="map" style="float:left; display:block; width:75%; height:480px; background-color:#F00;"></div>
+  <div id="sidebar" style="float:left; display:block; width:25%; height:480px; background-color:#580;">
+    Enter Trip Tag:
+    <input name="tag" type="text">
+    <br></br>
+    Enter Start Date:
+    <input name="startDate" type="date">
+    <br></br>
+    Enter End Date:
+    <input name="endDate" type="date">
+    <br></br>
+    <button style="float:left;">Insert trip</button>
+    <br></br>
+    Select Trip Tag:
+    <select id="list">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="fiat">Fiat</option>
+      <option value="audi">Audi</option>
+    </select>
+    <br></br>
+    <button style="float:left;">Load single trip</button>
+    <br></br>
+    <button style="float:left;">Save</button>
+    <br></br>
+    <div id="tripsNumber"></div>
+  </div>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI1TqgaGgm2CHqsdPl9DzXTwOv90zq4gs&callback=init">
     // AIzaSyBI1TqgaGgm2CHqsdPl9DzXTwOv90zq4gs
